--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class ="hero-image">
-        <div class = "heo-text">
+        <div class = "hero-text">
             <h1>Welcome To Lindsay</h1>
         </div>
     </div>
