--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class ="hero-image">
         <div class = "hero-text">
-            <h1>Welcome To Lindsay</h1>
+            <h1 class= "heroimage">Welcome To Lindsay</h1>
         </div>
     </div>
 
