--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link rel="stylesheet" href="css1.css"> <!-- coding for responsive design referenced from w3schools. (n.d). HTML Responsive Web Design. Retrieved from w3schools: https://www.w3schools.com/html/html_responsive.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head>
-
+<!--**********************************Homepage Header*****************************-->
+<!--Written by Malena-->
 <body>
-    <div class ="hero-image">
+    <div class ="homepage-hero-image">
         <div class = "hero-text">
-            <h1 class= "heroimage">Welcome To Lindsay</h1>
+            <h1 class= "homepage">Welcome To Lindsay</h1>
         </div>
     </div>
 
