--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class ="homepage-hero-image">
         <div class = "hero-text">
-            <h1 class= "homepage">Welcome To Lindsay</h1>
+            <h1 class= "heroimage">Welcome To Lindsay</h1>
         </div>
     </div>
 
