--- a/imagegallery.html
+++ b/imagegallery.html
@@ -50,23 +50,22 @@
 
   <h1>Gallery</h1>
 </div>
-
 <div class="row"> 
   <div class="column">
-  <img src="vicoceanedit.jpg" alt="Victoria BC">
-  <img src="victoriaedit.jpg" alt="Victoria BC">
-  <img src="vicoceanedit.jpg" alt="Victoria BC">
-  <img src="victoriaedit.jpg" alt="Victoria BC">
+  <img src="gallery1.jpg" alt="Victoria BC">
+  <img src="gallery2.jpg" alt="Victoria BC">
+  <img src="gallery5.jpg" alt="Victoria BC">
+  <img src="gallery3.jpg" alt="Victoria BC">
   </div>
   <div class="column">
-  <img src="victoriaedit.jpg" alt="Victoria BC">
-  <img src="vicoceanedit.jpg" alt="Victoria BC">
+  <img src="gallery6.jpg" alt="Victoria BC">
+  <img src="gallery4.jpg" alt="Victoria BC">
   </div>  
   <div class="column">
-  <img src="vicoceanedit.jpg" alt="Victoria BC">
+  <img src="gallery1.jpg" alt="Victoria BC">
   </div>
   <div class="column">
-  <img src="vicoceanedit.jpg" alt="Victoria BC">
+  <img src="gallery4.jpg" alt="Victoria BC">
   </div>
 </div>
 
