--- a/imagegallery.html
+++ b/imagegallery.html
@@ -46,13 +46,11 @@
 
 
 <!--**************Image Gallery************-->
- <div class="header">
-
-  <h1>Gallery</h1>
 </div>
 <div class="row"> 
   <div class="column">
-  <img src="gallery1.jpg" alt="Victoria BC">
+    <div> <img src="gallery1.jpg" alt="Lindsay" class = "gallery1"></div>
+    <div class = "G1Overlay">The Drive into Lindsay </div>
   <img src="gallery2.jpg" alt="Victoria BC">
   <img src="gallery5.jpg" alt="Victoria BC">
   <img src="gallery3.jpg" alt="Victoria BC">
