--- a/imagegallery.html
+++ b/imagegallery.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-
+    <div class ="imagegallery-hero-image">
+        <div class = "hero-text">
+            <h1 class= "heroimage">The Beautiful Sights of Lindsay</h1>
+        </div>
+    </div>
  <!--****************************NAVIGATION BAR ***********************************************--><!--Created by Mara Van Meer -->
  <ul class="navList">
     <li>
