--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 <!--**********************************Homepage Header*****************************-->
 <!--Written by Malena-->
 <body>
-    <div class ="homepage-hero-image">
-        <div class = "hero-text">
-            <h1 class= "heroimage">Welcome To Lindsay</h1>
-        </div>
+    <div class="homepage">
+    <h1>Welcome To Lindsay</h1>
+    <img src="conservationarea.jpg" />
     </div>
-
  <!--****************************NAVIGATION BAR ***********************************************--><!--Created by Mara Van Meer -->
  <ul class="navList">
     <li>
