--- a/imagegallery.html
+++ b/imagegallery.html
@@ -18,7 +18,7 @@
 <body>
     <div class ="imagegallery-hero-image">
         <div class = "hero-text">
-            <h1 class= "heroimage">The Beautiful Sights of Lindsay</h1>
+            <h1 class= "heroimage">Sights of Lindsay</h1>
         </div>
     </div>
  <!--****************************NAVIGATION BAR ***********************************************--><!--Created by Mara Van Meer -->
