--- a/imagegallery.html
+++ b/imagegallery.html
@@ -72,6 +72,46 @@
 </div>
 
 </body>
+<!-- Footer written by Chris Noakes-->
+<footer>
+        <!--Inspiration for footer drawn from w3schools, explorekawarthalakes.com, mdbootstrap.com-->
+        <div class="footerRow">
+			<div class="footerCol">
+			<!--Logo from kawarthalakes.ca -->
+				<a href = "https://www.kawarthalakes.ca/en/index.aspx" target="_blank">
+					<img src="imageFolder/logo_footer.png" alt="Kawartha Logo">
+				</a>
+			</div>
+            <div class="footerCol">
+				<h3 class="footerHeader">Small Header</h3> <!-- Subheader and contact information-->
+                <p id="footerBlurb">Here is a description of Lindsay taking up a third of the footer. lskdfglskdjfn gslkdjf gnslkjdfng lskjdf nlskjdf nglskjdf nglskjdfn glskjdf nskldjf nglskdjf
+				j sjd fghbksjdfh gbsjd fgbksjdfh gbksjd fgbsjd gbksjd gbksjdsljd fgbkjd fhgbksjdfh</p>
+            </div>
+			<!--List of links; idea from w3schools and explore kawartha lakes website-->
+            <div class="footerCol">
+				<h3  class="footerHeader">Some Links</h3>
+                <a href="#" class="footerLinks">Link 1</a>
+                <a href="#" class="footerLinks">Link 2</a>
+                <a href="#" class="footerLinks">Link 3</a>
+                <a href="#" class="footerLinks">Link 4</a>
+				<a href="#" class="footerLinks">Link 5</a>
+            </div>
+			<!--Social media image links-->
+            <div class="footerCol">
+                <h3>Check out our social media</h3>
+				<a href="#" class="socialLinks">
+					<img src="imageFolder/ResizeFB.png" alt="FB Link">
+				</a>
+				<a href="#" class="socialLinks">
+					<img src="imageFolder/instagramIMG.png" alt="FB Link">
+				</a>
+				<a href="#" class="socialLinks">
+					<img src="imageFolder/twitter.jpg" alt="FB Link">
+				</a>
+            </div>
+
+        </div>
+</footer>
 </html> 
 <!--Image gallery taken and edited based of w3schools How To 
   https://www.w3schools.com/howto/howto_js_image_grid.asp-->
