--- a/imagegallery.html
+++ b/imagegallery.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Main Page</title>
-
 <meta charset="UTF-8"> <!-- Used to remove error of undefined charset Declaring Character Encodings in HTML, https://www.w3.org/International/questions/qa-html-encoding-declarations#httphead. -->
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 <!-- coding for responsive design referenced from w3schools. (n.d). HTML Responsive Web Design. Retrieved from w3schools: https://www.w3schools.com/html/html_responsive.asp -->
 <!-- This is a comment from Grayson, Shawn's Git Review-->
 <!-- this is a comment--> 
-    <title>Lindsay Attractions</title>
+    <title>Image Gallery</title>
     <meta charset="UTF-8"> <!-- Used to remove error of undefined charset declaring character encodings 
                             https://www.w3.org/International/questions/qa-html-encoding-declarations#httphead.-->
     <link rel="stylesheet" href="css1.css"> <!-- coding for responsive design referenced from w3schools. (n.d). HTML Responsive Web Design. Retrieved from w3schools: https://www.w3schools.com/html/html_responsive.asp -->
@@ -18,7 +16,7 @@
 <body>
     <div class ="imagegallery-hero-image">
         <div class = "hero-text">
-            <h1 class= "heroimage">Sights of Lindsay</h1>
+            <h1 class= "heroimage">The Beautiful Sights of Lindsay</h1>
         </div>
     </div>
  <!--****************************NAVIGATION BAR ***********************************************--><!--Created by Mara Van Meer -->
@@ -53,23 +51,36 @@
 </div>
 <div class="row"> 
   <div class="column">
-    <div> <img src="gallery1.jpg" alt="Lindsay" class = "gallery1"></div>
-    <div class = "G1Overlay">The Drive into Lindsay </div>
-  <img src="gallery2.jpg" alt="Victoria BC">
-  <img src="gallery5.jpg" alt="Victoria BC">
-  <img src="gallery3.jpg" alt="Victoria BC">
+  <img src="gallery1.jpg" alt="Lindsay"> <!--Google Images: https://lindsayadvocate.ca/lindsay-woman-finds-mental-health-improving-basic-income/-->
+  <img src="gallery2.jpg" alt="Kent Street"><!--Google Images: https://www.russellalexander.com/lindsay/-->
+  <img src="gallery5.jpg" alt="Locks"><!--Google Image: https://www.flickr.com/photos/cliffhope/27837430295s-->
+  <img src="gallery3.jpg" alt="Kent st Winter"><!--Google Images: https://lindsayadvocate.ca/majority-basic-income-applicants-continue-low-income-workers/-->
   </div>
   <div class="column">
-  <img src="gallery6.jpg" alt="Victoria BC">
-  <img src="gallery4.jpg" alt="Victoria BC">
+  <img src="gallery6.jpg" alt="Lindsay Square Mall"><!--Google Images:https://www.lindsaysquare.ca/stores-->
+  <img src="gallery7.jpg" alt="Damn and Lock"><!--Google Images:https://scugoglakestewards.com/other-projects/the-operation-of-the-dam-at-lindsay/-->
+  <img src="gallery9.jpg" alt="Lindsay Ex"><!--Google Images: https://kawarthanow.com/2015/09/22/161st-lindsay-exhibition/-->
+  <img src="gallery11.jpg" alt="Lindsay"><!--Google Images:https://en.wikipedia.org/wiki/Lindsay,_Ontario-->
+  
   </div>  
   <div class="column">
-  <img src="gallery1.jpg" alt="Victoria BC">
+  <img src="gallery4.jpg" alt="Lindsay Prison"><!--Google Images:https://www.thepeterboroughexaminer.com/news-story/8203657-video-of-lindsay-guard-attacking-inmate-airs/-->
+  <img src="gallery10.jpg" alt="Ken REidC"><!--Google Images:https://www.picfair.com/pics/04398640-bridge-at-ken-reid-conservation-area-->
+  <img src="gallery12.jpg" alt="Days Inn"><!--Google Images:https://www.booking.com/hotel/ca/days-inn-lindsay.html-->
+  <img src="gallery13.jpg" alt="Loblaws"><!--Google Images:https://www.alamy.com/stock-photo-loblaws-grocery-store-in-lindsay-ontario-canada-72101109.html-->
   </div>
   <div class="column">
-  <img src="gallery4.jpg" alt="Victoria BC">
+  <img src="gallery8.jpg" alt="LindsayFair"><!--Google Images:https://www.lindsayex.com/parade-details-and-entry-form/-->
+  <img src="gallery14.jpg" alt="Highway35"><!--Google Images:http://www.thekingshighway.ca/PHOTOS/Hwy35B_lindsayphotos.htm-->
+  <img src="gallery15.jpg" alt="Construction"><!--Google Images:https://www.mykawartha.com/news-story/8905947-is-a-walmart-announcement-for-lindsay-imminent-/-->
+  <img src="gallery16.jpg" alt="Farm"><!--Google Images: chrome-extension://fheoggkfdfchfphceeifdbepaooicaho/html/block_page.html?url=https%3A//deniseandklaus.com/listing/258-highway-36-lindsay-ontario-k9v-4r4-21285029/-->
   </div>
 </div>
+
+</body>
+</html> 
+<!--Image gallery taken and edited based of w3schools How To 
+  https://www.w3schools.com/howto/howto_js_image_grid.asp-->
 
 </body>
 <!-- Footer written by Chris Noakes-->
