--- a/imagegallery.html
+++ b/imagegallery.html
@@ -46,7 +46,8 @@
   <!--Code for navigation bar referenced from CodePen. (n.d). navBar with Dropdown. 
     Retrieved from CodePen: https://codepen.io/zFunx/pen/XMKaBj--> 
 
-
+<!--Content-->
+<div class= "innerContent">
 <!--**************Image Gallery************-->
 </div>
 <div class="row"> 
@@ -75,6 +76,7 @@
   <img src="gallery15.jpg" alt="Construction"><!--Google Images:https://www.mykawartha.com/news-story/8905947-is-a-walmart-announcement-for-lindsay-imminent-/-->
   <img src="gallery16.jpg" alt="Farm"><!--Google Images: chrome-extension://fheoggkfdfchfphceeifdbepaooicaho/html/block_page.html?url=https%3A//deniseandklaus.com/listing/258-highway-36-lindsay-ontario-k9v-4r4-21285029/-->
   </div>
+</div>
 </div>
 
 </body>
